--- a/_config.yml
+++ b/_config.yml
@@ -165,15 +165,16 @@ external_sources:
 # Collections
 # -----------------------------------------------------------------------------
 
+
 collections:
-  news:
-    defaults:
-      layout: post
-    output: true
-    permalink: /news/:path/
-  projects:
-    output: true
-    permalink: /projects/:path/
+  #news:
+  #  defaults:
+  #    layout: post
+  #  output: true
+  #  permalink: /news/:path/
+  #projects:
+  #  output: true
+  #  permalink: /projects/:path/
 
 announcements:
   enabled: true
