--- a/_config.yml
+++ b/_config.yml
@@ -103,8 +103,8 @@ discord_id: # your discord id (18-digit unique numerical identifier)
 zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
-contact_note: #>
-  # You can even add a little note about which of these is the best way to reach you.
+contact_note: >
+   Email and LinkedIn are usually the best ways to contact me.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -221,6 +221,7 @@ exclude:
   - purgecss.config.js
   - README.md
   - vendor
+  - _pages/repositories
 keep_files:
   - CNAME
   - .nojekyll
