--- a/_config.yml
+++ b/_config.yml
@@ -221,7 +221,7 @@ exclude:
   - purgecss.config.js
   - README.md
   - vendor
-  - _pages/repositories
+  - _pages/repositories.md
 keep_files:
   - CNAME
   - .nojekyll
