--- a/_config.yml
+++ b/_config.yml
@@ -166,15 +166,15 @@ external_sources:
 # -----------------------------------------------------------------------------
 
 
-#collections:
-#  news:
-#    defaults:
-#      layout: post
-#    output: true
-#    permalink: /news/:path/
-#  projects:
-#    output: true
-#    permalink: /projects/:path/
+collections:
+  news:
+    defaults:
+      layout: post
+    output: true
+    permalink: /news/:path/
+  projects:
+    output: true
+    permalink: /projects/:path/
 
 announcements:
   enabled: true
