--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,9 +4,7 @@
     - name: Summary
       value: I develop computational imaging algorithms and systems to help understand and digitize the world.
     - name: Expertise
-      value: 
-        - High-resolution volumetric imaging
-        - Image processing and analysis (both AI and classic)
+      value: High-resolution volumetric imaging, image processing and analysis (both AI and classic)
 
 - title: Experience
   type: time_table
