--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -9,7 +9,7 @@
       description:
         - Deep learning-enabled algorithms for scaling high-resolution volumetric image reconstruction
         - High-resolution X-ray tomography imaging system design
-    - title: Optical Scientist Intern
+    - title: Optical Scientist - Intern
       institution: Meta Reality Labs
       year: 2023
       description:
